@@ -105,6 +105,8 @@
                 <arg>-Xlint:all,-serial,-processing,-this-escape</arg>
                 <arg>-ApropertyDir=${project.parent.basedir}/src/site/asciidoc/properties</arg>
                 <arg>-proc:full</arg>
+                <arg>--add-modules</arg>
+                <arg>jdk.incubator.vector</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
@@ -187,7 +189,7 @@
       <exclusions>
         <exclusion>
           <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-slf4j-impl</artifactId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
         </exclusion>
         <exclusion>
           <groupId>org.apache.logging.log4j</groupId>
@@ -235,6 +237,28 @@
       <groupId>tornado</groupId>
       <artifactId>tornado-api</artifactId>
       <version>${tornado.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.graalvm.polyglot</groupId>
+          <artifactId>polyglot</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.graalvm.sdk</groupId>
+          <artifactId>word</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.graalvm.sdk</groupId>
+          <artifactId>collections</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>info.picocli</groupId>
